modify the file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 </head>
 <body>
+	<h>hello world the movies center of hollwood distribution</h>
 	<!--navbar -->
 	<header>
 		<a href="#" class="logo">
